- README.CVS:
	- Mention that the minimum required version of texinfo is 4.0,
	  since that's the first version that supports generating HTML.
	  (DLR)
- doc/faq.html:
	- Add a new section 5.3 to explain the status of nano's Unicode
	  support. (Mike Frysinger, minor tweaks by DLR)
- doc/nano.1:
	- Make one non-bold instance of "nano" bold, for consistency.
	  (DLR)
- doc/nano.texi:
	- Fix inconsistent wording and punctuation. (DLR)
	- Add missing configure options. (Mike Frysinger, minor tweaks
	  by DLR)
	- Sort the configure options more consistently, and add missing
	  --disable-utf8 option. (DLR)
- doc/nanorc.sample:
	- Tweak the "c-file" regex for characters to properly accept
	  '\"' and reject '"' and '''. (DLR)
- doc/texinfo/Makefile.am:
	- Automatically generate an HTML version of the info page,
	  nano.html. (DLR)
- src/Makefile.am:
	- Add browser.c, help.c, and prompt.c to nano_SOURCES. (DLR)

GNU nano 1.3.9 - 2005.10.23
- General:
	- Miscellaneous comment fixes. (DLR)
	- More int -> bool conversions. (DLR)
	- Fix a few last instances of the current line number's being
	  saved as an int instead of a ssize_t.  Changes to
	  renumber_all(), renumber(), do_alt_speller(), and
	  backup_lines(). (DLR)
	- Reorder some functions for consistency. (DLR)
	- Rename variable open_files openfile, for consistency. (DLR)
	- Remove renumber()'s dependency on the main filestruct.
	  Changes to renumber(); removal of renumber_all(). (DLR)
	- Restructure things so that every file has its own
	  openfilestruct, and so that the values in it are used directly
	  instead of being periodically synced up with the globals.
	  Accordingly, remove the globals.  Changes to pretty much
	  every function.  Rename add_open_file() make_new_buffer(),
	  rename load_buffer() open_buffer(), rename load_open_file()
	  display_buffer(), rename open_prevnext_file()
	  switch_to_prevnext_buffer(), rename open_prevfile_void()
	  switch_to_prev_buffer(), rename open_nextfile_void()