@@ -47,6 +47,7 @@ Peio Ziarsolo <peio@sindominio.net>		Basque translator
 Ben Armstrong <synrg@sanctuary.nslug.ns.ca>	Negative -r value idea, code
 Thomas Dickey <dickey@herndon4.his.com>		Curses help and advice
 Sven Guckes <guckes@math.fu-berlin.de>		Advice and Advocacy
+Thijs Kinkhorst <thijs@kinkhorst.com>		rnano.1 manpage
 Jim Knoble <jmknoble@pobox.com>			Pico compat for browser
 Ryan Krebs <fluffy@highwire.stanford.edu>	Many bug fixes and testing
 Roy Lanek <lanek@ranahminang.net>		Advice and advocacy
